[package]
name = "yew-tou-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = []
storage = ["gloo-storage"]
markdown = ["dep:markdown"]

[dependencies]
gloo-storage = { version = "0.3.0", optional = true }
markdown = { version ="=1.0.0-alpha.17", optional = true }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
web-sys = { version = "0.3.68", features = ["DomRect"] }
yew = { version = "0.21.0", features = ["csr"] }

[dev-dependencies]
rstest = "0.21.0"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[bin]]
name = "example-basic"
path = "examples/basic.rs"