[package]
name = "yew-tou-rs"
version = "0.3.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = []
storage = ["gloo-storage"]
markdown = ["dep:markdown"]

[dependencies]
gloo-storage = { version = "0.3", optional = true }
markdown = { version = "1", optional = true }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
web-sys = { version = "0.3", features = ["DomRect", "ScrollToOptions", "ScrollBehavior"] }
yew = { version = "0.23", features = ["csr"] }

[dev-dependencies]
rstest = "0.23"

[[bin]]
name = "example-basic"
path = "examples/basic.rs"
